# calc-rs

./: .gitignore  Cargo.toml  I2C routine  build.rs  build.sh  device.x  linker.ld  memory.x
.cargo/: config.toml
src/: bare.rs  main.rs  runtime.rs
