[package]
name = "calc-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# stm32f0xx = {path = "../stm32f0xx", features = ["rt"]}
cortex-m-rt = {version = "0.7.3", features = ["device"]}
stm-util = {path = "../stm-util"}
bitmap32 = {path = "../bitmap32", default-features=false}
calc-alloc = {path = "../calc-alloc"}
calc = {path = "../calc"}
calc-common = {path = "../calc-common"}
calc-keyboard = {path = "../calc-keyboard"}

[profile.release]
opt-level = "z"
lto = "fat"
